# selenika_service_core_lib

./: README.md
docs/diagrams/src/: command_dispatcher_planttext.plantuml
src/: CMakeLists.txt  clean_project.sh
src/command_dispatcher/: command_dispatcher.hpp  command_dispatcher_base.cpp  command_dispatcher_base.h  command_dispatcher_base_commands.h  command_handler_join.h  command_handler_leave.h  command_handler_send_message.h  command_parser_join.h  command_parser_leave.h
src/command_dispatcher/impl/: command_dispatcher_base.cpp  command_dispatcher_base.h
src/command_line/: cmd_line_options.cpp  cmd_line_options.h  definitions.h
src/common/: selenika_api.h
src/config/: definitions.h  logging.cpp  logging.h
src/interfaces/: i_command_dispatcher.h
src/logging/: logging.h
src/messaging/: message_processing_data.cpp  message_processing_data.h  response.cpp  response.h  signaling_protocol.h
src/server/: ssh_websocket_server.cpp  ssh_websocket_server.h
src/system/: definitions.h  system_utils.cpp  system_utils.h
src/websocket/: listener.cpp  listener.hpp  request_handler.cpp  request_handler.h  sessions.cpp  sessions.h  websocket_session.cpp  websocket_session.hpp
tests/command_dispatcher/: CMakeLists.txt  clean_project.sh  main.cpp
tests/peer_server/: CMakeLists.txt  clean_project.sh  command_dispatcher_commands.h  command_handler_join.h  command_parser_join.h  command_parser_send_message.h  main.cpp  start.sh
tests/peer_server/test_page/: config.js  index.html  index.js  main.css  ui.js
tests/ssl-certificates/: server.crt  server.key
